<resources>
    <string name="app_name">Desafio Victor Luiz</string>
    <string name="hint_username">Nome de usuário</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_email_username">E-mail ou Nome de Usuário</string>
    <string name="hint_password">Senha (mínimo 6 caracteres)</string>
    <string name="button_save_register">Salvar Cadastro</string>
    <string name="hint_password_login">Senha</string>
    <string name="button_enter">Entrar</string>
    <string name="button_go_to_register">Ainda não tem uma conta? Cadastre-se</string>
    <string name="error_empty_fields">Por favor, preencha todos os campos.</string>
    <string name="success_login">Bem-vindo(a), %1$s!</string>
    <string name="error_user_not_found">Usuário não encontrado.</string>
    <string name="error_invalid_password">E-mail ou senha inválidos.</string>
    <string name="main_welcome_message">Bem-vindo(a)!</string>
    <string name="main_button_logout">Sair (Logout)</string>
    <string name="app_name_splash">Meu App</string>
    <string name="error_weak_password">A senha deve ter no mínimo 6 caracteres.</string>
    <string name="error_email_in_use">Este e-mail já está em uso.</string>
    <string name="error_username_in_use">Este nome usuário já está em uso.</string>
    <string name="error_empty_field">Este campo não pode ser vazio</string>
    <string name="error_invalid_email">Formato de e-mail inválido</string>
    <string name="success_register">Cadastro realizado com sucesso!</string>
    <string name="hint_birthdate">Data de Nascimento</string>
    <string name="hint_state">Estado (UF)</string>
    <string name="hint_city">Cidade</string>
    <string name="menu_logout">Sair</string>
    <string name="category_event_party">Festa</string>
    <string name="category_event_show">Show</string>
    <string name="category_event_sports">Esportes</string>
    <string name="category_event_comedy">Comédia</string>
    <string name="category_event_theater">Teatro</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_edit_profile">Editar Perfil</string>
    <string name="menu_delete_account">Excluir Conta</string>
    <string name="main_empty_list_message">Você ainda não tem eventos.\nClique no + para criar o primeiro!</string>
    <string name="hint_confirm_password">Confirmar Senha</string>
    <string name="register_title_welcome">Bem-vindo(a),</string>
    <string name="register_subtitle_create">Crie sua conta</string>
    <string name="register_go_to_login">Já tem uma conta? Faça o login</string>
    <string name="login_title">Bem vindo ao nosso aplicativo!</string>
    <string name="error_passwords_do_not_match">As senhas não conferem.</string>
</resources>